# ai-rewrite-hotkey

./: .gitignore  CONTEXT.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: personal-prototype.md  smoke-validation.md
docs/adr/: 0001-azure-openai-only-for-v0.md  0002-tauri-v2-desktop-shell.md  0003-typescript-orchestration-rust-primitives.md  0004-direct-rest-azure-chat-completions.md  0005-native-clipboard-snapshot.md
scripts/: with-cargo-path.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  native_capture.rs
src-tauri/ui/: index.html
src/app/: app-state.test.ts  app-state.ts  metadata-log.test.ts  metadata-log.ts  replacement-flow.test.ts  replacement-flow.ts  tauri-cli.ts  test-rewrite.test.ts  test-rewrite.ts
src/capture/: selected-text-capture.test.ts  selected-text-capture.ts
src/config/: cli.ts  config.test.ts  config.ts  defaults.ts  paths.ts  types.ts
src/rewrite/: azure-client.test.ts  azure-client.ts  cli.ts  errors.ts  output-validation.test.ts  output-validation.ts  prompt-builder.test.ts  prompt-builder.ts  rewrite-request.test.ts  rewrite-request.ts  types.ts
src/screenshot/: screenshot-context.test.ts  screenshot-context.ts
src/settings/: settings.test.ts  settings.ts
